# markdown-analyzer

./: .gitignore  README.md  benchmark.sh  compare_results.py  run-all.sh  run-go.sh  run-rust.sh  run-tests.sh  run-zig.sh
go/: go.mod  main.go  main_test.go  markdown-analyzer
input/: README.md  article.md  comparison.md  file_0000.md  file_0001.md  file_0002.md  file_0003.md  file_0004.md  file_0005.md  file_0006.md  file_0007.md  file_0008.md  file_0009.md  file_0010.md  file_0011.md  file_0012.md  file_0013.md  file_0014.md  file_0015.md  file_0016.md  file_0017.md  file_0018.md  file_0019.md  file_0020.md  file_0021.md  file_0022.md  file_0023.md  file_0024.md  file_0025.md  file_0026.md  file_0027.md  file_0028.md  file_0029.md  file_0030.md  file_0031.md  file_0032.md  file_0033.md  file_0034.md  file_0035.md  file_0036.md  (+9965 more)
output/: go.txt  rust.txt  stats-go.json  stats-rust.json  stats-zig.json
rust/: Cargo.toml
rust/output/: stats-rust.json
rust/src/: analyzer.rs  main.rs
tools/: generate_inputs  generate_inputs.rs
zig/: build.zig
zig/.zig-cache/o/5c4172bacf59e25ab53f4d0db2bd439a/: test
zig/.zig-cache/o/658ceac0600f644fe1cb45226c9bf8e8/: markdown-analyzer
zig/.zig-cache/o/6970d9026a04641584322ed27e067bf7/: markdown-analyzer
zig/.zig-cache/o/6eb5b789b2193e82a9394b0e71ded45e/: markdown-analyzer
zig/.zig-cache/o/7c280d57ebb65f8a806e87d2ea78fcf8/: test
zig/.zig-cache/o/88c776be17c38398b928c1fd7539aa2f/: markdown-analyzer
zig/output/: stats-zig.json
zig/src/: analyzer.zig  main.zig
(+3 files in other folders)
