[package]
name = "markdown_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"
[dev-dependencies]
tempfile = "3.8"
